--- a/OpenIdDictSample/Pages/Consent.cshtml
+++ b/OpenIdDictSample/Pages/Consent.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using OpenIdDictSample.Services
 @using static OpenIdDictSample.Services.AuthorizationService
-@model OpenIdDictSample.Pages.Concent
+@model OpenIdDictSample.Pages.Consent
 
 @*Please do not forget to add tag helper*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
